# mdbook-exercises

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  SYNTAX.md
.github/workflows/: examples.yml
assets/: exercises.css  exercises.js
docs/: USECASE_EXERCISES.md  exercises-integration.md  setup-exercises.md
examples/: README.md  calculator.md  ch02-environment-setup.md  double-exercise.md  hello-world.ai.toml  hello-world.md  lint_empty_tests.rs  multilang-js.md  multilang-python.md  parse_exercise.rs  render_example.rs  solution-reveal.md  usecase-defense.md  usecase-healthcare.md  validate_exercises.rs
sample-book/: README.md  book.toml
sample-book/src/: SUMMARY.md  exercises.md  intro.md  setup.md  usecase-examples.md
sample-book/src/theme/: exercises.css  exercises.js
src/: lib.rs  main.rs  parser.rs  preprocessor.rs  render.rs  types.rs
tests/: integration_tests.rs
